// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common Button render Render active reject button 1`] = `
<button
  className="button active"
  type="button"
>
  REJECT
</button>
`;

exports[`Common Button render Render empty button 1`] = `
<button
  className="button "
  type="button"
/>
`;

exports[`Common Button render Render inactive success button 1`] = `
<button
  className="button "
  type="button"
>
  SUCCESS
</button>
`;
